--- a/index.html
+++ b/index.html
@@ -22,39 +22,100 @@
   <body>
     <!-- Шапка страниц-->
 
-    <header class="header-underline">
-      <div class="container flex">
-        <nav class="flex">
-          <a href="./index.html" lang="en" class="logo"
-            ><span class="logo__text">Web</span>Studio</a
-          >
-
-          <ul class="list flex main-nav">
-            <li class="main-nav__item">
-              <a href="./index.html" class="main-nav__link main-nav__current">Студия</a>
-            </li>
-            <li class="main-nav__item">
-              <a href="./portfolio.html" class="main-nav__link">Портфолио</a>
-            </li>
-            <li class="main-nav__item"><a href="" class="main-nav__link">Контакты</a></li>
-          </ul>
-        </nav>
-
-        <ul class="list connect-header flex">
-          <li class="connect-header__item ">
-            <a href="mailto:info@devstudio.com" class="connect-header__link ">
-              <svg class="connect-header__mail">
-                <use href="./images/icons.svg#icon-mail"></use>
-              </svg>
-              info@devstudio.com</a
+    <header class="header">
+      <div class="header-underline">
+        <div class="container">
+          <nav class="menu-nav">
+            <a href="./index.html" lang="en" class="logo"
+              ><span class="logo__text">Web</span>Studio</a
             >
-          </li>
-          <li class="connect-header__item">
-            <a href="tel:+380961111111" class="connect-header__link "
-              ><svg class="connect-header__phone">
-                <use href="./images/icons.svg#icon-smartphone"></use></svg>+38 096 111 11 11</a>
-          </li>
-        </ul>
+            <button
+              type="button"
+              class="menu-button js-open-menu"
+              data-menu-button
+            >
+              <svg
+                width="40"
+                height="40"
+                aria-label="Переключатель мобильного меню"
+              >
+                <use class="icon-menu" href="./images/icons.svg#menu"></use>
+              </svg>
+            </button>
+            <div
+              class="menu-container js-menu-container"
+              id="menu-container"
+              data-menu
+            >
+              <div class="menu-container__wrap">
+                <button
+                  type="button"
+                  class="menu-button js-close-menu"
+                  data-menu-button
+                >
+                  <svg
+                    width="40"
+                    height="40"
+                    aria-label="Переключатель мобильного меню"
+                  >
+                    <use
+                      class="icon-cross"
+                      href="./images/icons.svg#cross"
+                    ></use>
+                  </svg>
+                </button>
+                <ul class="list main-nav">
+                  <li class="main-nav__item">
+                    <a
+                      href="./index.html"
+                      class="main-nav__link main-nav__current"
+                      >Студия</a
+                    >
+                  </li>
+                  <li class="main-nav__item">
+                    <a href="./portfolio.html" class="main-nav__link"
+                      >Портфолио</a
+                    >
+                  </li>
+                  <li class="main-nav__item">
+                    <a href="" class="main-nav__link">Контакты</a>
+                  </li>
+                </ul>
+
+                <ul class="list connect-header">
+                  <li class="connect-header__item">
+                    <a
+                      href="tel:+380961111111"
+                      class="connect-header__link connect-header__link-blue"
+                      ><svg class="connect-header__icon-phone">
+                        <use
+                          href="./images/icons.svg#icon-smartphone"
+                        ></use></svg
+                      >+38 096 111 11 11</a
+                    >
+                  </li>
+                  <li class="connect-header__item">
+                    <a
+                      href="mailto:info@devstudio.com"
+                      class="connect-header__link connect-header__link-size"
+                    >
+                      <svg class="connect-header__icon-mail">
+                        <use href="./images/icons.svg#icon-mail"></use>
+                      </svg>
+                      info@devstudio.com</a
+                    >
+                  </li>
+                </ul>
+                <ul class=" list menu-container__social-list">
+                  <li class="menu-container__social-item"><a href="/" class="menu-container__social-link">Instagram</a></li>
+                  <li class="menu-container__social-item"><a href="/" class="menu-container__social-link">Twitter</a></li>
+                  <li class="menu-container__social-item"><a href="/" class="menu-container__social-link">Facebook</a></li>
+                  <li class="menu-container__social-item"><a href="/" class="menu-container__social-link">LinkedIn</a></li>
+                </ul>
+              </div>
+            </div>
+          </nav>
+        </div>
       </div>
     </header>
 
@@ -66,7 +127,7 @@
           <button data-modal-open type="button" class="hero__button">
             Заказать услугу
           </button>
-          <div data-modal class="backdrop is-hidden">
+          <!-- <div data-modal class="backdrop is-hidden">
             <div class="backdrop__modal">
               <button data-modal-close type="button" class="backdrop__button-close">
                 <svg class="backdrop__icon-close" width="11" height="11">
@@ -77,7 +138,7 @@
                 Оставьте свои данные, мы вам перезвоним
               </h2>
 
-              <form class="modal flex">
+              <form class="modal ">
                 <label for="name" class="modal__item">Имя </label>
                 <div class="modal__wrap">
                   <svg class="modal__icon">
@@ -127,7 +188,7 @@
                 <button type="submit" class="backdrop__button-send">Отправить</button>
               </form>
             </div>
-          </div>
+          </div> -->
         </div>
       </section>
 
@@ -137,7 +198,7 @@
         <div class="container">
           <h2 class="hiden-element">наши особености</h2>
 
-          <ul class="list flex our-features">
+          <ul class="list our-features">
             <li class="our-features__item">
               <div class="our-features__bg">
                 <svg class="our-features__icon" width="70" height="70">
@@ -180,7 +241,7 @@
                   <use href="./images/icons.svg#icon-astronaut"></use>
                 </svg>
               </div>
-              <h3 class=" our-features__subtitle">Современные технологии</h3>
+              <h3 class="our-features__subtitle">Современные технологии</h3>
               <p class="our-features__text">
                 Значимость этих проблем настолько очевидна, что реализация
                 плановых заданий.
@@ -189,11 +250,13 @@
           </ul>
         </div>
       </section>
+
       <!-- Чем мы занимаемся -->
-      <section class="section">
+
+      <section class="section section__what-we-do">
         <div class="container">
-          <h2 class="title">Чем мы занимаемся</h2>
-          <ul class="list flex what-we-do">
+          <h2 class="what-we-do__title">Чем мы занимаемся</h2>
+          <ul class="list what-we-do">
             <li class="what-we-do__item">
               <img
                 src="./images/what-we-do/first_img.jpg"
@@ -231,27 +294,22 @@
         </div>
       </section>
 
-
-      
       <!-- Наша команда -->
-
-
 
       <section class="section team-bg">
         <div class="container">
           <h2 class="title">Наша команда</h2>
-          <ul class="list flex team">
+          <ul class="list team">
             <li class="team__item">
               <img
+                class="team__photo"
                 src="./images/our_team/ihor_demyanenko.jpg"
                 alt="Фото Игоря Демьяненко"
-                width="270"
-                height="260"
               />
               <div class="team__wrap">
                 <h3 class="team__subtitle">Игорь Демьяненко</h3>
                 <p lang="en" class="team__text">Product Designer</p>
-                <ul class="list flex social">
+                <ul class="list social">
                   <li class="social__item">
                     <a href="" class="social__link">
                       <svg class="social__icon">
@@ -300,17 +358,20 @@
               <img
                 src="./images/our_team/olga_repina.jpg"
                 alt="Фото Ольги Репиной"
-                width="270"
-                height="260"
+                class="team__photo"
               />
               <div class="team__wrap">
                 <h3 class="team__subtitle">Ольга Репина</h3>
                 <p lang="en" class="team__text">Frontend Developer</p>
-                <ul class="list flex social">
+                <ul class="list social">
                   <li class="social__item">
                     <a href="" class="social__link">
                       <svg class="social__icon">
-                        <use href="./images/icons.svg#icon-instagram"></use>
+                        <use
+                          href="./images/icons.svg#icon-instagram"
+                          width="20"
+                          height="20"
+                        ></use>
                       </svg>
                     </a>
                   </li>
@@ -355,13 +416,12 @@
               <img
                 src="./images/our_team/nikolay_tarasov.jpg"
                 alt="Фото Николая Тарасова"
-                width="270"
-                height="260"
+                class="team__photo"
               />
               <div class="team__wrap">
                 <h3 class="team__subtitle">Николай Тарасов</h3>
                 <p lang="en" class="team__text">Marketing</p>
-                <ul class="list flex social">
+                <ul class="list social">
                   <li class="social__item">
                     <a href="" class="social__link">
                       <svg class="social__icon">
@@ -410,13 +470,12 @@
               <img
                 src="./images/our_team/mihail_yermakov.jpg"
                 alt="Фото Михаила Ермакова"
-                width="270"
-                height="260"
+                class="team__photo"
               />
               <div class="team__wrap">
                 <h3 class="team__subtitle">Михаил Ермаков</h3>
                 <p lang="en" class="team__text">UI Designer</p>
-                <ul class="list flex social">
+                <ul class="list social">
                   <li class="social__item">
                     <a href="" class="social__link">
                       <svg class="social__icon">
@@ -469,7 +528,7 @@
       <section class="section">
         <div class="container">
           <h2 class="title">Постоянные клиенты</h2>
-          <ul class="list flex customers ">
+          <ul class="list customers">
             <li class="customers__item">
               <a href="/" class="customers__link"
                 ><svg class="customers__icon" width="106" height="60">
@@ -514,10 +573,8 @@
     </main>
     <!-- footer -->
 
-
-
     <footer class="footer-bg">
-      <div class="container flex">
+      <div class="container">
         <div class="wrap-address">
           <a href="./index.html" lang="en" class="logo fotter-logo"
             ><span class="logo__text">Web</span>Studio
@@ -533,18 +590,24 @@
                 >
               </li>
               <li class="address__item">
-                <a href="tel:+380961111111" class="address__link">+38 096 111 11 11</a>
+                <a href="tel:+380961111111" class="address__link"
+                  >+38 096 111 11 11</a
+                >
               </li>
             </ul>
           </address>
         </div>
         <div class="footer-join">
           <h3 class="footer-join__text">присоединяйтесь</h3>
-          <ul class="list flex">
+          <ul class="social list flex">
             <li class="social__item">
-              <a href="" class="social__link footer-icon-bg ">
-                <svg class="social__icon ">
-                  <use href="./images/icons.svg#icon-instagram"></use>
+              <a href="" class="social__link footer-icon-bg">
+                <svg class="social__icon">
+                  <use
+                    href="./images/icons.svg#icon-instagram"
+                    width="20"
+                    height="20"
+                  ></use>
                 </svg>
               </a>
             </li>
@@ -584,11 +647,11 @@
           </ul>
         </div>
         <!-- Подпишитесь на рассылку -->
-        <div class="sign-us flex">
+        <div class="sign-us">
           <label for="email-footer" class="sign-us__text"
             >Подпишитесь на рассылку</label
           >
-          <form class="flex">
+          <form class="">
             <input
               type="email"
               class="sign-us__input"
@@ -596,7 +659,7 @@
               placeholder="E-mail"
               name="email"
             />
-            <button type="submit" class="sign-us__btn ">
+            <button type="submit" class="sign-us__btn">
               Подписаться
               <svg class="sign-us__icon">
                 <use href="./images/icons.svg#icon-send"></use>
@@ -607,5 +670,6 @@
       </div>
     </footer>
     <script src="./js/modal.js"></script>
+    <script src="./js/menu.js"></script>
   </body>
 </html>
