--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 height="40"
                 aria-label="Переключатель мобильного меню"
               >
-                <use class="icon-menu" href="./images/icons.svg#menu"></use>
+                <use class="menu-button__icon-menu" href="./images/icons.svg#menu"></use>
               </svg>
             </button>
             <div
@@ -59,7 +59,7 @@
                     aria-label="Переключатель мобильного меню"
                   >
                     <use
-                      class="icon-cross"
+                      class=" menu-button__icon-cross"
                       href="./images/icons.svg#cross"
                     ></use>
                   </svg>
@@ -127,7 +127,7 @@
           <button data-modal-open type="button" class="hero__button">
             Заказать услугу
           </button>
-          <!-- <div data-modal class="backdrop is-hidden">
+          <div data-modal class="backdrop is-hidden">
             <div class="backdrop__modal">
               <button data-modal-close type="button" class="backdrop__button-close">
                 <svg class="backdrop__icon-close" width="11" height="11">
@@ -188,7 +188,7 @@
                 <button type="submit" class="backdrop__button-send">Отправить</button>
               </form>
             </div>
-          </div> -->
+          </div>
         </div>
       </section>
 
