--- a/index.html
+++ b/index.html
@@ -86,47 +86,55 @@
                   </li>
                 </ul>
 
-                <ul class="list connect-header">
-                  <li class="connect-header__item">
-                    <a
-                      href="tel:+380961111111"
-                      class="connect-header__link connect-header__link-blue"
-                      ><svg class="connect-header__icon-phone">
-                        <use
-                          href="./images/icons.svg#icon-smartphone"
-                        ></use></svg
-                      >+38 096 111 11 11</a
-                    >
-                  </li>
-                  <li class="connect-header__item">
-                    <a
-                      href="mailto:info@devstudio.com"
-                      class="connect-header__link connect-header__link-size"
-                    >
-                      <svg class="connect-header__icon-mail">
-                        <use href="./images/icons.svg#icon-mail"></use>
-                      </svg>
-                      info@devstudio.com</a
-                    >
-                  </li>
-                </ul>
+                <di>
+                  <ul class="list connect-header">
+                    <li class="connect-header__item">
+                      <a
+                        href="tel:+380961111111"
+                        class="connect-header__link connect-header__link-blue"
+                        ><svg class="connect-header__icon-phone">
+                          <use
+                            href="./images/icons.svg#icon-smartphone"
+                          ></use></svg
+                        >+38 096 111 11 11</a
+                      >
+                    </li>
+                    <li class="connect-header__item">
+                      <a
+                        href="mailto:info@devstudio.com"
+                        class="connect-header__link connect-header__link-size"
+                      >
+                        <svg class="connect-header__icon-mail">
+                          <use href="./images/icons.svg#icon-mail"></use>
+                        </svg>
+                        info@devstudio.com</a
+                      >
+                    </li>
+                  </ul>
 
-                <ul class="list menu-container__social-list">
-                  <li class="menu-container__social-item">
-                    <a href="/" class="menu-container__social-link"
-                      >Instagram</a
-                    >
-                  </li>
-                  <li class="menu-container__social-item">
-                    <a href="/" class="menu-container__social-link">Twitter</a>
-                  </li>
-                  <li class="menu-container__social-item">
-                    <a href="/" class="menu-container__social-link">Facebook</a>
-                  </li>
-                  <li class="menu-container__social-item">
-                    <a href="/" class="menu-container__social-link">LinkedIn</a>
-                  </li>
-                </ul>
+                  <ul class="list menu-container__social-list">
+                    <li class="menu-container__social-item">
+                      <a href="/" class="menu-container__social-link"
+                        >Instagram</a
+                      >
+                    </li>
+                    <li class="menu-container__social-item">
+                      <a href="/" class="menu-container__social-link"
+                        >Twitter</a
+                      >
+                    </li>
+                    <li class="menu-container__social-item">
+                      <a href="/" class="menu-container__social-link"
+                        >Facebook</a
+                      >
+                    </li>
+                    <li class="menu-container__social-item">
+                      <a href="/" class="menu-container__social-link"
+                        >LinkedIn</a
+                      >
+                    </li>
+                  </ul>
+                </di>
               </div>
             </div>
           </nav>
@@ -664,7 +672,7 @@
             <ul class="social list flex">
               <li class="social__item">
                 <a href="" class="social__link footer-icon-bg">
-                  <svg class="social__icon">
+                  <svg class="social__icon social__icon-footer">
                     <use
                       href="./images/icons.svg#icon-instagram"
                       width="20"
@@ -675,7 +683,7 @@
               </li>
               <li class="social__item">
                 <a href="" class="social__link footer-icon-bg">
-                  <svg class="social__icon">
+                  <svg class="social__icon social__icon-footer">
                     <use
                       href="./images/icons.svg#icon-twitter"
                       width="20"
@@ -686,7 +694,7 @@
               </li>
               <li class="social__item">
                 <a href="" class="social__link footer-icon-bg">
-                  <svg class="social__icon">
+                  <svg class="social__icon social__icon-footer">
                     <use
                       href="./images/icons.svg#icon-facebook"
                       width="20"
@@ -697,7 +705,7 @@
               </li>
               <li class="social__item">
                 <a href="" class="social__link footer-icon-bg">
-                  <svg class="social__icon">
+                  <svg class="social__icon social__icon-footer">
                     <use
                       href="./images/icons.svg#icon-linkedin"
                       width="20"
