--- a/portfolio.html
+++ b/portfolio.html
@@ -82,47 +82,54 @@
                     <a href="" class="main-nav__link">Контакты</a>
                   </li>
                 </ul>
-
-                <ul class="list connect-header">
-                  <li class="connect-header__item">
-                    <a
-                      href="tel:+380961111111"
-                      class="connect-header__link connect-header__link-blue"
-                      ><svg class="connect-header__icon-phone">
-                        <use
-                          href="./images/icons.svg#icon-smartphone"
-                        ></use></svg
-                      >+38 096 111 11 11</a
-                    >
-                  </li>
-                  <li class="connect-header__item">
-                    <a
-                      href="mailto:info@devstudio.com"
-                      class="connect-header__link connect-header__link-size"
-                    >
-                      <svg class="connect-header__icon-mail">
-                        <use href="./images/icons.svg#icon-mail"></use>
-                      </svg>
-                      info@devstudio.com</a
-                    >
-                  </li>
-                </ul>
-                <ul class="list menu-container__social-list">
-                  <li class="menu-container__social-item">
-                    <a href="/" class="menu-container__social-link"
-                      >Instagram</a
-                    >
-                  </li>
-                  <li class="menu-container__social-item">
-                    <a href="/" class="menu-container__social-link">Twitter</a>
-                  </li>
-                  <li class="menu-container__social-item">
-                    <a href="/" class="menu-container__social-link">Facebook</a>
-                  </li>
-                  <li class="menu-container__social-item">
-                    <a href="/" class="menu-container__social-link">LinkedIn</a>
-                  </li>
-                </ul>
+                <div>
+                  <ul class="list connect-header">
+                    <li class="connect-header__item">
+                      <a
+                        href="tel:+380961111111"
+                        class="connect-header__link connect-header__link-blue"
+                        ><svg class="connect-header__icon-phone">
+                          <use
+                            href="./images/icons.svg#icon-smartphone"
+                          ></use></svg
+                        >+38 096 111 11 11</a
+                      >
+                    </li>
+                    <li class="connect-header__item">
+                      <a
+                        href="mailto:info@devstudio.com"
+                        class="connect-header__link connect-header__link-size"
+                      >
+                        <svg class="connect-header__icon-mail">
+                          <use href="./images/icons.svg#icon-mail"></use>
+                        </svg>
+                        info@devstudio.com</a
+                      >
+                    </li>
+                  </ul>
+                  <ul class="list menu-container__social-list">
+                    <li class="menu-container__social-item">
+                      <a href="/" class="menu-container__social-link"
+                        >Instagram</a
+                      >
+                    </li>
+                    <li class="menu-container__social-item">
+                      <a href="/" class="menu-container__social-link"
+                        >Twitter</a
+                      >
+                    </li>
+                    <li class="menu-container__social-item">
+                      <a href="/" class="menu-container__social-link"
+                        >Facebook</a
+                      >
+                    </li>
+                    <li class="menu-container__social-item">
+                      <a href="/" class="menu-container__social-link"
+                        >LinkedIn</a
+                      >
+                    </li>
+                  </ul>
+                </div>
               </div>
             </div>
           </nav>
@@ -164,7 +171,7 @@
           <h1 class="hidden-element">Примеры работ</h1>
           <ul class="list portfolio-card">
             <li class="portfolio-card__item">
-              <a class=" portfolio-card__link" href="./portfolio.html">
+              <a class="portfolio-card__link" href="./portfolio.html">
                 <div class="card-overflow">
                   <img
                     srcset="
@@ -191,7 +198,7 @@
               </a>
             </li>
             <li class="portfolio-card__item">
-              <a class=" portfolio-card__link" href="./portfolio.html">
+              <a class="portfolio-card__link" href="./portfolio.html">
                 <div class="card-overflow">
                   <img
                     srcset="
@@ -211,7 +218,7 @@
                   </div>
                 </div>
                 <div class="portfolio-card__description">
-                  <h2 class="portfolio-card__subtitle" >
+                  <h2 class="portfolio-card__subtitle">
                     Постер <span lang="en">New Orlean vs Golden Star</span>
                   </h2>
                   <p class="portfolio-card__text">Дизайн</p>
@@ -219,7 +226,7 @@
               </a>
             </li>
             <li class="portfolio-card__item">
-              <a class=" portfolio-card__link" href="./portfolio.html">
+              <a class="portfolio-card__link" href="./portfolio.html">
                 <div class="card-overflow">
                   <img
                     srcset="
@@ -247,7 +254,7 @@
               </a>
             </li>
             <li class="portfolio-card__item">
-              <a class=" portfolio-card__link" href="./portfolio.html">
+              <a class="portfolio-card__link" href="./portfolio.html">
                 <div class="card-overflow">
                   <img
                     srcset="
@@ -275,7 +282,7 @@
               </a>
             </li>
             <li class="portfolio-card__item">
-              <a class=" portfolio-card__link" href="./portfolio.html">
+              <a class="portfolio-card__link" href="./portfolio.html">
                 <div class="card-overflow">
                   <img
                     srcset="
@@ -303,7 +310,7 @@
               </a>
             </li>
             <li class="portfolio-card__item">
-              <a class=" portfolio-card__link" href="./portfolio.html">
+              <a class="portfolio-card__link" href="./portfolio.html">
                 <div class="card-overflow">
                   <img
                     srcset="
@@ -331,7 +338,7 @@
               </a>
             </li>
             <li class="portfolio-card__item">
-              <a class=" portfolio-card__link" href="./portfolio.html">
+              <a class="portfolio-card__link" href="./portfolio.html">
                 <div class="card-overflow">
                   <img
                     srcset="
@@ -359,7 +366,7 @@
               </a>
             </li>
             <li class="portfolio-card__item">
-              <a class=" portfolio-card__link" href="./portfolio.html">
+              <a class="portfolio-card__link" href="./portfolio.html">
                 <div class="card-overflow">
                   <img
                     srcset="
@@ -387,7 +394,7 @@
               </a>
             </li>
             <li class="portfolio-card__item">
-              <a class=" portfolio-card__link" href="./portfolio.html">
+              <a class="portfolio-card__link" href="./portfolio.html">
                 <div class="card-overflow">
                   <img
                     srcset="
@@ -449,7 +456,7 @@
             <ul class="social list flex">
               <li class="social__item">
                 <a href="" class="social__link footer-icon-bg">
-                  <svg class="social__icon">
+                  <svg class="social__icon social__icon-footer">
                     <use
                       href="./images/icons.svg#icon-instagram"
                       width="20"
@@ -460,7 +467,7 @@
               </li>
               <li class="social__item">
                 <a href="" class="social__link footer-icon-bg">
-                  <svg class="social__icon">
+                  <svg class="social__icon social__icon-footer">
                     <use
                       href="./images/icons.svg#icon-twitter"
                       width="20"
@@ -471,7 +478,7 @@
               </li>
               <li class="social__item">
                 <a href="" class="social__link footer-icon-bg">
-                  <svg class="social__icon">
+                  <svg class="social__icon social__icon-footer">
                     <use
                       href="./images/icons.svg#icon-facebook"
                       width="20"
@@ -482,7 +489,7 @@
               </li>
               <li class="social__item">
                 <a href="" class="social__link footer-icon-bg">
-                  <svg class="social__icon">
+                  <svg class="social__icon social__icon-footer">
                     <use
                       href="./images/icons.svg#icon-linkedin"
                       width="20"
